unpackaged/main/default/objects/TMA_Lab_Admin__c/TMA_Lab_Admin__c.object-meta.xml
<CustomObject>
    <label>TMA Lab Admin</label>
    <nameField>
        <displayFormat>TMA_Admin-{00000}</displayFormat>
        <label>TMA Lab Admin Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMA Lab Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>