unpackaged/main/default/objects/TMA_Lab_Admin__c/fields/TMA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TMA_End_Date__c</fullName>
    <label>TMA End Date</label>
    <type>Date</type>
</CustomField>