unpackaged/main/default/objects/TMA_Lab_Admin__c/fields/TMA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>TMA_Start_Date__c</fullName>
    <label>TMA Start Date</label>
    <type>Date</type>
</CustomField>