unpackaged/main/default/objects/TMA_Lab_Admin__c/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RUN</fullName>
            </value>
            <value>
                <fullName>Initialisation</fullName>
            </value>
            <value>
                <fullName>Comitologie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>