unpackaged/main/default/objects/TMA_Lab_Admin__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TMA_Start_Date__c</columns>
    <columns>TMA_End_Date__c</columns>
    <columns>Type_of_Request__c</columns>
    <columns>Number_of_days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>